Prevent API sidebar from becoming fixed on screens that are too short

--- a/src/stylus/api.styl
+++ b/src/stylus/api.styl
@@ -241,14 +241,19 @@
 
     width: 100%;
     max-width: 148px;
-
-    &.fixed {
-      position: fixed;
-    }
   }
 
-  .top {
-    display: block;
+  // Only make the sidebar fixed position
+  // on screens over 31em (496px) tall
+  @media only screen and (min-height: 31em) {
+      .sidebar.fixed {
+        position: fixed;
+
+        .top {
+          display: block;
+        }
+      }
+    }
   }
 }
 
